k8s/microservice/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gomicroservicestarter-frontend
  labels:
    app: kustomize
spec:
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kustomize
    spec:
      containers:
        - name: gomicroservicestarter-frontend
          # image: registry.dev.clarkezone.dev/pocketgeotemp:latest
          image:
            registry.hub.docker.com/clarkezone/go-microservice-starter:0.0.1
            #        image: registry.hub.docker.com/clarkezone/previewd:webhooke2e
          args: ["testserverweb"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
            - containerPort: 8095
