k8s/microservice/frontend/metricsservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomicroservicestarter-metrics-service
spec:
  selector:
    app: kustomize
  ports:
    - port: 8095
      name: metrics
