k8s/microservice/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gomicroservicestarter
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
    - hosts:
        - gomicroservicestarter-stage.dev.clarkezone.dev
      secretName: gomicroservicestarter-tls
  rules:
    - host: gomicroservicestarter-stage.dev.clarkezone.dev
      http:
        paths:
          - backend:
              service:
                name: gomicroservicestarter-service-frontend
                port:
                  number: 8090
            path: /
            pathType: Prefix
